feat(server): compare if remote genres configured locally (#109)
