# docs/swagger/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /
 definitions:
+  anilist.GenreConfigStatus:
+    properties:
+      isConfigured:
+        type: boolean
+      name:
+        type: string
+    type: object
   server.breakdownRowResponse:
     properties:
       applied_multiplier:
@@ -212,7 +219,7 @@ definitions:
         type: string
       genres:
         items:
-          type: string
+          $ref: '#/definitions/anilist.GenreConfigStatus'
         type: array
       id:
         type: integer
